<resources>
    <string name="app_name">TheMovieBookingApp</string>
    <string name="lbl_welcome">Welcome!</string>
    <string name="lbl_hello">Hello! Welcome to Galaxy App.</string>
    <string name="lbl_get_started">Get Started</string>
    <string name="lbl_login_welcome">Welcome!</string>
    <string name="lbl_welcome_back">Welcome Back, login to continue</string>
    <string name="lbl_phone_no">Phone No.</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_sign_in_with_facebook">Sign in With Facebook</string>
    <string name="lbl_sign_in_with_google">Sign in With Google</string>
    <string name="lbl_confirm">Confirm</string>
    <string name="lbl_forgot_password">Forgot Password ?</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_movie_name">Kamisama Kiss</string>
    <string name="lbl_now_showing">Now Showing</string>
    <string name="lbl_comming_soon">Comming Soon</string>
    <string name="lbl_movie_time">1h 26m</string>
    <string name="lbl_get_your_ticket">Get your ticket</string>
    <string name="lbl_gc_golden_city">GC : Golden City</string>
    <string name="lbl_available_in">Available In</string>
    <string name="lbl_gc_west_point">GC : West Point</string>
    <string name="lbl_dont_have_promo_code">Don\'t have any promo code ?</string>
    <string name="lbl_payment_method">Payment method</string>
    <string name="lbl_awesome">Awesome!</string>
    <string name="lbl_this_is_your_ticket">This is your ticket.</string>
    <string name="lbl_booking_no">Booking no</string>
    <string name="lbl_plot_summary">Plot Summary</string>
    <string name="lbl_cast">Cast</string>
    <string name="lbl_next">Next</string>
    <string name="lbl_hint_enter_promo_code">Enter Promo Code</string>
    <string name="lbl_payment_amount">Payment Amount</string>
    <string name="lbl_add_new_card">Add new card</string>
    <string name="lbl_card_number">Card number</string>
    <string name="lbl_card_holder">Card holder</string>
    <string name="lbl_expiration_date">Expiration date</string>
    <string name="lbl_cvc">CVC</string>
    <string name="lbl_show_time_date">Show time - Date</string>
    <string name="lbl_theater">Theater</string>
    <string name="lbl_show_time_date_value">07:00 PM - 10 May</string>
    <string name="lbl_theater_value">Galary Cinema - Golden City</string>
    <string name="lbl_screen">Screen</string>
    <string name="lbl_screen_value">2</string>
    <string name="lbl_row">Row</string>
    <string name="lbl_row_value">D</string>
    <string name="lbl_seats">Seats</string>
    <string name="lbl_seats_value">5,6</string>
    <string name="lbl_price">Price</string>
    <string name="lbl_price_value">$40.00</string>
    <string name="lbl_total_amount">$ 926.21</string>
    <string name="lbl_get_it_now">Get it now</string>
    <string name="lbl_sub_total">Sub total :</string>
    <string name="lbl_sub_total_value">40$</string>


    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="lbl_4_stars">* * * *</string>
    <string name="lbl_available">Available</string>
    <string name="lbl_reserved">Reserved</string>
    <string name="lbl_your_selection">Your Selection</string>
    <string name="lbl_ticket">Ticket</string>
    <string name="label_seats">Seats</string>
    <string name="lbl_promotion_code">Promotion Code</string>
    <string name="lbl_select_a_language">Select a Language</string>
    <string name="lbl_tearm_of_service">Tearm of Service</string>
    <string name="lbl_help">Help</string>
    <string name="lbl_rate_us">Rate us</string>
    <string name="lbl_log_out">Log out</string>
    <string name="lbl_visa">VISA</string>
</resources>