<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragment.LoginFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_email"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textinplayoutEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvEmail"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ipedittxtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textinplayoutEmail"
        android:text="@string/lbl_password"
        android:layout_marginTop="@dimen/margin_medium_2_18" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtinplayoutPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvPassword"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ipedittxtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvForgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtinplayoutPassword"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/lbl_forgot_password"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/margin_medium"/>

    <include
        android:id="@+id/vpLoginBtn"
        layout="@layout/view_pod_loginsigninbuttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvForgetPassword"
        android:layout_marginTop="@dimen/margin_xlarge" />


</RelativeLayout>