<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SnackActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:outlineSpotShadowColor="@android:color/transparent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btnBackToBookingTicket"
            android:layout_width="@dimen/width_back_btn"
            android:layout_height="@dimen/height_back_btn"
            android:layout_marginStart="@dimen/margin_medium_2"
            android:layout_marginTop="@dimen/margin_large"
            android:src="@drawable/ic_baseline_arrow_back_ios_black_24dp"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_xxxxlarge"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium_2"
            android:layout_marginEnd="@dimen/margin_medium_2">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvComboSet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textinpPromoCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rvComboSet"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:hint="@string/lbl_hint_enter_promo_code"
                    android:textStyle="italic"
                    android:layout_marginStart="-12dp"
                    android:maxLines="1"/>
            </com.google.android.material.textfield.TextInputLayout>

<!--            <androidx.appcompat.widget.AppCompatEditText-->
<!--                android:id="@+id/textinpPromoCode"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_below="@id/rvComboSet"-->
<!--                android:layout_marginTop="@dimen/margin_medium_3"-->
<!--                android:hint="Enter Promo Code"-->
<!--                android:textStyle="italic" />-->

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvDontHavePromoCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textinpPromoCode"
                android:text="@string/lbl_dont_have_promo_code"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvGetItNow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textinpPromoCode"
                android:layout_toEndOf="@id/tvDontHavePromoCode"
                android:textColor="@color/black"
                android:layout_marginStart="@dimen/margin_medium"
                android:text="@string/lbl_get_it_now"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSubTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvDontHavePromoCode"
                android:textColor="@color/colorGreenText"
                android:layout_marginTop="@dimen/margin_medium_3"
                android:text="@string/lbl_sub_total"
                android:textSize="@dimen/margin_medium_2"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSubTotalAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/tvSubTotal"
                android:layout_below="@id/tvDontHavePromoCode"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_toEndOf="@id/tvSubTotal"
                tools:text="@string/lbl_sub_total_value"
                android:textColor="@color/colorGreenText"
                android:textSize="@dimen/margin_medium_2" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPaymentMethod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvSubTotal"
                android:textColor="@color/black"
                android:text="@string/lbl_payment_method"
                android:textStyle="bold"
                android:textSize="@dimen/text_regular_3x"
                android:layout_marginTop="@dimen/margin_medium_3"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvPaymentMethod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvPaymentMethod"
                android:layout_marginTop="@dimen/margin_medium_2"/>

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:elevation="@dimen/margin_medium_2"
        android:id="@+id/btnPayment"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_get_your_ticket_btn"
        android:background="@drawable/background_floating_btn"
        android:layout_gravity="bottom"
        tools:text="Pay $40.00"
        android:textSize="@dimen/text_regular_2x"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:layout_marginEnd="@dimen/margin_medium_2"
        android:layout_marginBottom="@dimen/margin_medium_2"/>


</androidx.coordinatorlayout.widget.CoordinatorLayout>